--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="./nav/nav.js" defer></script>
     <link rel="stylesheet" href="./stylesBase.css" />
     <title>Cherish Calendar</title>
+    <link rel="icon" type="image/png" href="./img/favicon/favicon.ico" />
   </head>
   <body>
     <div class="app">
